--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "bittensor-mcp-server",
-  "version": "1.0.0",
-  "description": "Cloudflare MCP Server with Bittensor Oracle API Integration",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc",
-    "dev": "wrangler dev",
-    "deploy": "tsc && wrangler deploy"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "hono": "^3.11.11",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240320.1",
-    "@types/node": "^20.11.27",
-    "typescript": "^5.4.2",
-    "wrangler": "^3.32.0"
-  }
+	"name": "remote-mcp-server",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev",
+		"format": "biome format --write",
+		"lint:fix": "biome lint --fix",
+		"start": "wrangler dev",
+		"cf-typegen": "wrangler types"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20250422.0",
+		"marked": "^15.0.7",
+		"typescript": "^5.5.2",
+		"workers-mcp": "^0.1.0-3",
+		"wrangler": "^4.12.1"
+	},
+	"dependencies": {
+		"@cloudflare/workers-oauth-provider": "^0.0.2",
+		"@modelcontextprotocol/sdk": "^1.7.0",
+		"agents": "^0.0.53",
+		"hono": "^4.7.4",
+		"zod": "^3.24.2"
+	}
 }
