refactor: migrate to Cloudflare Workers
- Add OAuth authentication flow
- Implement SSE endpoint for MCP Inspector
- Update configuration for Cloudflare deployment
- Remove redundant files and simplify code structure
- Add comprehensive documentation
- Update README and add CHANGES.md

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "my-mcp-server",
+	"name": "bittensor-mcp-server",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-03-10",
 	"compatibility_flags": [
@@ -13,7 +13,7 @@
 	"migrations": [
 		{
 			"new_sqlite_classes": [
-				"MyMCP"
+				"BittensorMCP"
 			],
 			"tag": "v1"
 		}
@@ -21,7 +21,7 @@
 	"durable_objects": {
 		"bindings": [
 			{
-				"class_name": "MyMCP",
+				"class_name": "BittensorMCP",
 				"name": "MCP_OBJECT"
 			}
 		]
@@ -29,7 +29,7 @@
 	"kv_namespaces": [
 		{
 			"binding": "OAUTH_KV",
-			"id": "<ADD YOUR KV NAMESPACEID HERE>"
+			"id": "74d706e197b840808c38f14f78d573c8"
 		}
 	],
 	"observability": {
