--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bittensor-mcp": "./build/index.js"
   },
   "scripts": {
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc && chmod 755 build/index.js",
+    "generate-api": "node scripts/generate-api.js"
   },
   "files": [
     "build"
@@ -18,10 +19,12 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
+    "node-fetch": "^3.3.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "@types/node-fetch": "^2.6.11",
     "typescript": "^5.8.3"
   }
 }
