--- a/package.json
+++ b/package.json
@@ -1,22 +1,49 @@
 {
-  "name": "bittensor-mcp",
+  "name": "@bitmind/bittensor-mcp",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Model Context Protocol (MCP) server for Bittensor API",
+  "main": "build/index.js",
   "type": "module",
   "bin": {
     "bittensor-mcp": "./build/index.js"
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
-    "generate-api": "node scripts/generate-api.js"
+    "init-submodule": "git submodule init && git submodule update",
+    "generate-openapi": "cd subnet-io-registry/docs && python generate_openapi.py",
+    "generate-api": "node scripts/generate-api.js",
+    "prepare": "npm run init-submodule && npm run build",
+    "prepublishOnly": "npm run generate-openapi && npm run generate-api && npm run build",
+    "version": "git add -A",
+    "postversion": "git push && git push --tags"
   },
   "files": [
-    "build"
+    "build",
+    "README.md",
+    "LICENSE"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "bittensor",
+    "mcp",
+    "modelcontextprotocol",
+    "ai",
+    "llm",
+    "claude",
+    "anthropic"
+  ],
+  "author": "BitMind AI",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BitMind-AI/bittensor-mcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BitMind-AI/bittensor-mcp/issues"
+  },
+  "homepage": "https://github.com/BitMind-AI/bittensor-mcp#readme",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
     "node-fetch": "^3.3.2",
