ci: add automatic GitHub Release creation
- Update GitHub Actions workflow to create GitHub Releases
- Use softprops/action-gh-release action to generate release notes
- Update documentation to reflect the automatic release creation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,17 @@ jobs:
       - name: Build
         run: npm run build
       
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
       - name: Publish to npm
         run: npm publish --access public
         env:
