--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,24 @@ jobs:
           node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
       
+      - name: Verify tag matches package version
+        run: |
+          # Extract version from package.json
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+          # Extract version from tag (remove 'v' prefix)
+          TAG_VERSION=${GITHUB_REF#refs/tags/v}
+          
+          echo "Package version: $PACKAGE_VERSION"
+          echo "Tag version: $TAG_VERSION"
+          
+          # Check if versions match
+          if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
+            echo "Error: Tag version ($TAG_VERSION) does not match package.json version ($PACKAGE_VERSION)"
+            exit 1
+          fi
+          
+          echo "✅ Version check passed: Tag version matches package.json version"
+      
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
