--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@bitmind/bittensor-mcp",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Model Context Protocol (MCP) server for Bittensor API",
   "main": "build/index.js",
   "type": "module",
   "bin": {
-    "bittensor-mcp": "./build/index.js"
+    "bittensor-mcp": "./build/index.js",
+    "@bitmind/bittensor-mcp": "./build/index.js"
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
