--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "build/index.js",
   "type": "module",
   "bin": {
-    "bittensor-mcp": "./build/index.js",
-    "@bitmind/bittensor-mcp": "./build/index.js"
+    "bittensor-mcp": "./build/index.js"
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
