--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -6,6 +6,12 @@ on:
       - main
       - mcp-release-workflow-test
   workflow_dispatch:
+    inputs:
+      force_tag:
+        description: 'Force tag creation even if version has not changed'
+        required: false
+        default: false
+        type: boolean
 
 permissions:
   contents: write
@@ -32,9 +38,9 @@ jobs:
           echo "Current version: $CURRENT_VERSION"
           echo "new_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           
-          # For workflow_dispatch, always create a tag
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "Manual workflow run - forcing tag creation"
+          # For workflow_dispatch with force_tag=true, we don't need to compare versions
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" && "${{ github.event.inputs.force_tag }}" == "true" ]]; then
+            echo "Force tag creation requested"
             echo "version_changed=true" >> $GITHUB_OUTPUT
             exit 0
           fi
