--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@types/node": "^22.14.1",
     "@types/node-fetch": "^2.6.11",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   }
 }
