--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
+    "js-yaml": "^4.1.0",
     "node-fetch": "^3.3.2",
     "zod": "^3.24.3"
   },
